Fix security vulnerabilities: command injection, SQL injection, and insecure H2 config
Co-authored-by: aabashkin <3102155+aabashkin@users.noreply.github.com>